# aspnetcore/src/IO.Swagger/Controllers/GetClecUserApi.cs
@@ -1,0 +1,59 @@
+/*
+ * Sample API
+ *
+ * Optional multiline or single-line description in HTML.
+ *
+ * OpenAPI spec version: 0.1.9
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+using System;
+using System.Collections.Generic;
+using Microsoft.AspNetCore.Mvc;
+using Swashbuckle.AspNetCore.Annotations;
+using Swashbuckle.AspNetCore.SwaggerGen;
+using Newtonsoft.Json;
+using System.ComponentModel.DataAnnotations;
+using IO.Swagger.Attributes;
+
+using Microsoft.AspNetCore.Authorization;
+using IO.Swagger.Models;
+
+namespace IO.Swagger.Controllers
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [ApiController]
+    public class GetClecUserApiController : ControllerBase
+    { 
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <remarks>Get Clec User</remarks>
+        /// <param name="clecUuid">Clec uuid to get clec user</param>
+        /// <response code="200">Successfully Executed</response>
+        /// <response code="404">Object not fount error</response>
+        [HttpGet]
+        [Route("/araqelyan777/Peeringhub/0.1.9/admin/clec/{clec_uuid}")]
+        [ValidateModelState]
+        [SwaggerOperation("AdminClecClecUuidGet")]
+        [SwaggerResponse(statusCode: 200, type: typeof(InlineResponse200), description: "Successfully Executed")]
+        [SwaggerResponse(statusCode: 404, type: typeof(InlineResponse404), description: "Object not fount error")]
+        public virtual IActionResult AdminClecClecUuidGet([FromRoute][Required]string clecUuid)
+        { 
+            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(200, default(InlineResponse200));
+
+            //TODO: Uncomment the next line to return response 404 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(404, default(InlineResponse404));
+            string exampleJson = null;
+            exampleJson = "{\n  \"state_of_clec_certification\" : \"state_of_clec_certification\",\n  \"contact_suite\" : \"contact_suite\",\n  \"role\" : \"role\",\n  \"last_name\" : \"last_name\",\n  \"contact_city\" : \"contact_city\",\n  \"profile_country\" : \"profile_country\",\n  \"profile_suite\" : \"profile_suite\",\n  \"profile_city\" : \"profile_city\",\n  \"contact_postal_code\" : 0.8008281904610115,\n  \"upload_clec_certification\" : \"upload_clec_certification\",\n  \"password\" : \"password\",\n  \"profile_address\" : \"profile_address\",\n  \"company_name\" : \"company_name\",\n  \"profile_postal_code\" : 6.027456183070403,\n  \"phone_number\" : \"phone_number\",\n  \"ocn\" : \"ocn\",\n  \"first_name\" : \"first_name\",\n  \"contact_address\" : \"contact_address\",\n  \"email\" : \"\",\n  \"username\" : \"username\",\n  \"clec_uuid\" : \"clec_uuid\",\n  \"contact_country\" : \"contact_country\"\n}";
+            
+                        var example = exampleJson != null
+                        ? JsonConvert.DeserializeObject<InlineResponse200>(exampleJson)
+                        : default(InlineResponse200);            //TODO: Change the data returned
+            return new ObjectResult(example);
+        }
+    }
+}
