# aspnetcore/src/IO.Swagger/Models/InlineResponse404.cs
@@ -1,0 +1,147 @@
+/*
+ * Sample API
+ *
+ * Optional multiline or single-line description in HTML.
+ *
+ * OpenAPI spec version: 0.1.9
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace IO.Swagger.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class InlineResponse404 : IEquatable<InlineResponse404>
+    { 
+        /// <summary>
+        /// Gets or Sets Error
+        /// </summary>
+        [DataMember(Name="error")]
+        public string Error { get; set; }
+
+        /// <summary>
+        /// Gets or Sets ErrorType
+        /// </summary>
+        [DataMember(Name="error_type")]
+        public string ErrorType { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Success
+        /// </summary>
+        [DataMember(Name="success")]
+        public bool? Success { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class InlineResponse404 {\n");
+            sb.Append("  Error: ").Append(Error).Append("\n");
+            sb.Append("  ErrorType: ").Append(ErrorType).Append("\n");
+            sb.Append("  Success: ").Append(Success).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (ReferenceEquals(null, obj)) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((InlineResponse404)obj);
+        }
+
+        /// <summary>
+        /// Returns true if InlineResponse404 instances are equal
+        /// </summary>
+        /// <param name="other">Instance of InlineResponse404 to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(InlineResponse404 other)
+        {
+            if (ReferenceEquals(null, other)) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    Error == other.Error ||
+                    Error != null &&
+                    Error.Equals(other.Error)
+                ) && 
+                (
+                    ErrorType == other.ErrorType ||
+                    ErrorType != null &&
+                    ErrorType.Equals(other.ErrorType)
+                ) && 
+                (
+                    Success == other.Success ||
+                    Success != null &&
+                    Success.Equals(other.Success)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (Error != null)
+                    hashCode = hashCode * 59 + Error.GetHashCode();
+                    if (ErrorType != null)
+                    hashCode = hashCode * 59 + ErrorType.GetHashCode();
+                    if (Success != null)
+                    hashCode = hashCode * 59 + Success.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(InlineResponse404 left, InlineResponse404 right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(InlineResponse404 left, InlineResponse404 right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
